@@ -1,6 +1,8 @@
 Changes since version 2.1.0
 ---------------------------
 
+- Added sequences of fixed-length elements to throughput demo.
+
 - Fixed a bug that could cause an assert if connections could not be
   established in thread-per-connection mode.
 
